fix struct read
