# internal/http-server/interfaces/handlers/message/set.go
@@ -9,42 +9,58 @@ import (
 
 
 
-// SetRequest представляет структуру запроса для установки сообщения
+// SetRequest представляет запрос для установки нового сообщения
+// swagger:parameters SetMessage
 type SetRequest struct {
-	ID   string `json:"id"`
+	// Текст сообщения
+    // in: body
+    // required: true
+    // example: "Hello, World!"
 	Text string `json:"text"`
 }
 
-// SetResponse представляет структуру ответа для установки сообщения
+// SetResponse представляет ответ на запрос установки сообщения
+// swagger:response SetResponse
 type SetResponse struct {
-	Err     int    `json:"error,omitempty"`
+	// ID нового сообщения
+    // example: "111"
 	ID      string `json:"id,omitempty"`
-	Message string `json:"message,omitempty"`
 }
 
-// messageSetter описывает интерфейс для установки сообщений
 type messageSetter interface {
 	Insert(ctx context.Context, text string) (string, error)
 }
 
-// Producer описывает интерфейс для отправки сообщений
+
 type Producer interface {
 	ProduceMessage(id, text string) error
 }
 
 // NewSetter создает новый обработчик для установки сообщения
-// @Summary Set message
-// @Description Set message by ID
-// @Tags messages
-// @Accept json
-// @Produce json
-// @Param request body SetRequest true "Set Request"
-// @Success 200 {object} SetResponse
-// @Failure 400 {object} SetResponse
-// @Failure 500 {object} SetResponse
-// @Router /set [post]
-
-func NewSetter(userGetter messageSetter, produce Producer) http.HandlerFunc {
+// swagger:route POST /set setMessage
+//
+// Установить новое сообщение
+//
+// Запрос должен содержать:
+//   - name: body
+//     in: body
+//     description: Запрос для установки сообщения
+//     required: true
+//     schema:
+//       $ref: '#/components/schemas/SetRequest'
+//
+//     responses:
+//       200:
+//         description: Сообщение успешно установлено
+//         content:
+//           application/json:
+//             schema:
+//               $ref: '#/components/schemas/SetResponse'
+//       400:
+//         description: Неверные данные запроса
+//       500:
+//         description: Ошибка сервера
+func NewSetter(messageSetter messageSetter, produce Producer) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		var req SetRequest
 		if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
@@ -52,7 +68,7 @@ func NewSetter(userGetter messageSetter, produce Producer) http.HandlerFunc {
 			return
 		}
 
-		id, err := userGetter.Insert(context.Background(), req.Text)
+		id, err := messageSetter.Insert(context.Background(), req.Text)
 		if err != nil {
 			log.Printf("Failed to insert data: %v", err)
 			http.Error(w, "Failed to insert data", http.StatusInternalServerError)
@@ -67,8 +83,7 @@ func NewSetter(userGetter messageSetter, produce Producer) http.HandlerFunc {
 		}
 
 		res := SetResponse{
-			ID:      req.ID,
-			Message: "Data inserted successfully",
+			ID:      id,
 		}
 		w.Header().Set("Content-Type", "application/json")
 		if err := json.NewEncoder(w).Encode(res); err != nil {
